[package]
name = "rapidscript"
description = "Tools for rapid scripting with rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
bytes = "1.2.1"
chrono = "0.4.22"
console = "0.15.1"
csv = "1.1.6"
dialoguer = "0.10.2"
dotenv = "0.15.0"
indicatif = "0.17.0"
itertools = "0.10.3"
ron = "0.8.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85" }
toml = "0.5.9"
ureq = "2.5.0"
